Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-123117

MediaPlayer crashes on seek after loop reset.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P3: Somewhat important
    • 6.5.6, 6.8.0 FF
    • 6.8.0
    • Multimedia
    • None
    • Linux/X11
    • eff9ffa5c (dev), 372083080 (6.7), 7f7016ec6 (6.6), 0f88db448 (tqtc/lts-6.5)

    Description

      Steps to reproduce:

      1. Open the MediaPlayer demo application
      2. Open a video
      3. Play video and set the loop mode to infinite loop
      4. After video has looped over once, set the loop mode to no loop
      5. Seek ahead on the video using the timeline

      Expected:

      Video playback position is changed normally

      Actual:

      Application crashes on following assertion:

      ASSERT: "loops < 0 || m_posWithOffset.offset.index < loops" in file ~/qt6/qtmultimedia/src/plugins/multimedia/ffmpeg/playbackengine/qffmpegdemuxer.cpp, line 42

      Debugger breakpoint on failed assertion shows loops as 1 and m_posWithoffset.offset.index as 1.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mikko.hallamaa Mikko Hallamaa
            mikko.hallamaa Mikko Hallamaa
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews